@@ -3730,6 +3730,9 @@ build
     If <code>CONFIG_DEBUG_VERBOSE</code> is defined in addition, then general debug comments will also be included in the console output.
   </li>
   <li>
+    <code>CONFIG_DEBUG_ENABLE</code>: Support an interface to enable or disable debug output.
+  </li>
+  <li>
     <code>CONFIG_DEBUG_SYMBOLS</code>: build without optimization and with debug symbols (needed for use with a debugger).
     This option has nothing to do with debug output.
   </li>
