@@ -2456,4 +2456,6 @@
 	* lib/stdio/lib_syslogstream:  Add a stream object that will be used to
 	  re-direct all debug output to the RAM log if CONFIG_SYSLOG and
 	  CONFIG_RAMLOG_SYSLOG are defined.
+	* lib/misc/lib_dbg.c: Add an interface enabled with CONFIG_DEBUG_ENABLE that
+	  can be used to turn debug output on and off.
 
